--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -1,56 +1,80 @@
 @font-face
-  font-family: 'icomoon'
-  src:  url('../fonts/icomoon.eot?3sb8ng')
-  src:  url('../fonts/icomoon.eot?3sb8ng#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?3sb8ng') format('truetype'),
-    url('../fonts/icomoon.woff?3sb8ng') format('woff'),
-    url('../fonts/icomoon.svg?3sb8ng#icomoon') format('svg')
-  font-weight: normal
-  font-style: normal
-
+  font-family: 'iconfont';
+  src:  url('../fonts/iconfont.eot?t=1524048120983');
+  src:  url('../fonts/iconfont.eot?t=1524048120983#iefix') format('embedded-opentype'),
+    url('../fonts/iconfont.ttf?t=1524048120983') format('truetype'),
+    url('../fonts/iconfont.svg?t=1524048120983#iconfont') format('svg');
+  font-weight: normal;
+  font-style: normal;
 
 [class^="icon-"], [class*=" icon-"]
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important
+  font-family:"iconfont" !important;
   speak: none
   font-style: normal
   font-weight: normal
   font-variant: normal
   text-transform: none
   line-height: 1
+  font-size: 0.8rem
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
 
-.icon-back:before
-  content: "\e900"
+.icon-xueli:before { 
+  content: "\e63c"; 
+}
 
-.icon-close:before
-  content: "\e901"
+.icon-mingpian:before {
+  content: "\e65d";
+}
 
-.icon-down:before
-  content: "\e902"
+.icon-xingxing:before {
+  content: "\e610";
+}
 
-.icon-ege:before
-  content: "\e903"
+.icon-back:before {
+  content: "\e601";
+}
 
-.icon-goto:before
-  content: "\e904"
+.icon-close:before {
+  content: "\e602";
+}
 
-.icon-heard:before
-  content: "\e905"
+.icon-down:before {
+  content: "\e603";
+}
 
-.icon-images:before
-  content: "\e906"
+.icon-ege:before {
+  content: "\e604";
+}
 
-.icon-phone:before
-  content: "\e907"
+.icon-goto:before {
+  content: "\e605";
+}
 
-.icon-star:before
-  content: "\e908"
+.icon-heard:before {
+  content: "\e606";
+}
 
-.icon-up:before
-  content: "\e909"
+.icon-images:before {
+  content: "\e607";
+}
 
+.icon-phone:before {
+  content: "\e608";
+}
+
+.icon-star:before {
+  content: "\e609";
+}
+
+.icon-up:before {
+  content: "\e60a";
+}
+
+.icon-zhuanfa:before { 
+  content: "\e61e"; 
+}
